deps/v8/test/message/fail/destructuring-array-non-iterable-object-literal-complex.out
*%(basename)s:5: TypeError: {(intermediate value)} is not iterable
var [a] = {['a']: {b: 1}};
          ^
TypeError: {(intermediate value)} is not iterable
    at *%(basename)s:5:11
